--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 
 python:
-  - "3.4"
   - "3.5"
   - "3.6"
 
@@ -12,10 +11,13 @@ before_install:
   - pip install flake8
   - pip install coveralls
 
+install:
+  - pip install .
+
 script:
   - flake8 .
   - cd tests
-  - coverage run run_tests.py
+  - coverage run --source=geo_playground run_tests.py
 
 after_success:
   - coveralls
